2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2454: install-data-local needs to check that
	classes.jsa actually exists
	* Makefile.am:
	(install-data-local): Remove conditionals around
	classes.jsa installation, instead just checking
	that the file exists. Create the directory for it
	first, as technically install-data-local does not
	depend on install-exec-local and so should be
	self-sufficient.
	* NEWS: Updated.

2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2448: Install TRADEMARK, COPYING and ChangeLog
	as RPM spec file does
	* Makefile.am:
	(install-data-local): Install missing files.
	* NEWS: Updated.

2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2447: Allow greater control of Javadoc
	installation directory
	* Makefile.am:
	(install-data-local): Install Javadocs into
	$htmldir rather than $docdir/html, so the
	user has more control over where they end up.
	Copy the contents of docs rather than the
	directory itself.
	* NEWS: Updated.

2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2443: install stage fails where
	BUILD_ARCH_DIR != INSTALL_ARCH_DIR
	* Makefile.am:
	(install-exec-local): Use INSTALL_ARCH_DIR
	rather than BUILD_ARCH_DIR as the two are not
	the same on x86 (i386 vs. i586)
	(install-data-local): Likewise.
	* NEWS: Updated.

2012-03-14  Mark Wielaard  <mjw@redhat.com>

	PR2256: Add SystemTap tests
	* Makefile.am (EXTRA_DIST): Add tapset/jstack.stp.in.

2012-10-24  Lukas Berk  <lberk@redhat.com>

	PR1975: Add garbage collection probes for SystemTap
	* Makefile.am:
	(EXTRA_DIST): Add tapset/hotspot_gc.stp.in.
	(stamps/icedtea.stamp): Build tapset/hotspot_gc.stp.
	(stamps/icedtea-debug.stamp): Likewise.
	* configure.ac: Generate tapset/hotspot_gc.stp.
	* tapset/hotspot_gc.stp.in:
	Systemtap tapset allowing use of GC probes more comfortablely.

2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2439: NSS PKCS11 regression - due to java.security
	automatic loading